[package]
edition = "2021"
name = "rustbot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = [
  "client",
  "gateway",
  "model",
  "rustls_backend",
], version = "0.11"}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
